<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    tools:context="edu.qc.seclass.glm.GMLActivity3">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--
           <androidx.appcompat.widget.Toolbar
               android:id="@+id/actionbar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/colorPrimary"
               android:minHeight="?attr/actionBarSize"
               android:theme="?attr/actionBarTheme"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               />
            -->

        <Button
            android:id="@+id/otherOptionsAct5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            app:backgroundTint="@android:color/holo_orange_light"
            android:text="Other Options"
            app:layout_constraintBottom_toBottomOf="@id/button_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="57dp"
            app:layout_constraintTop_toBottomOf="@id/otherOptionsAct5"
            android:layout_marginTop="1dp"
            android:id="@+id/button_line">
            <Button
                android:id="@+id/clearAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Clear All Checks"
                android:layout_weight="1"
                android:onClick="clearAllChecks"
                android:background="@color/purple_200"
                app:backgroundTint="@android:color/holo_orange_light"
                />
            <Button
                android:id="@+id/addByType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Adding an Item"
                android:layout_weight="1"
                android:background="@color/purple_200"
                app:backgroundTint="@android:color/holo_orange_light"
                />

            <Button
                android:id="@+id/browseItemsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Browse Items"

                android:layout_weight="1"
                android:background="@color/purple_200"
                app:backgroundTint="@android:color/holo_orange_light"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_line"
            app:layout_constraintBottom_toBottomOf="parent">

            <ListView
                android:id="@+id/listViewForItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="afterDescendants"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/itemNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="Item"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/itemTypeTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="Item Type"
                        android:textColor="@color/white" />

                    <!-- text view for our course duration -->
                    <TextView
                        android:id="@+id/itemUnitTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="Item Unit"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/itemQTYTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="Item Quantity"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/itemChkTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="isChecked"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/itemSelTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="isSelected"
                        android:textColor="@color/white" />
                    <!-- text view for our course description -->
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>