<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center"
    >

    <EditText
        android:id="@+id/createGroceryListEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Grocery List Name Here" />

</RelativeLayout>